test/force-app/main/default/objects/Cost_Estimation_Equipment_Selection__c/Cost_Estimation_Equipment_Selection__c.object-meta.xml
<CustomObject>
    <label>Cost Estimation Equipment Selection</label>
    <nameField>
        <displayFormat>CE-{000000}</displayFormat>
        <label>Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Estimation Equipment Selections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>