test/force-app/main/default/objects/Cost_Estimation_Equipment_Selection__c/fields/Cost_Verified__c.field-meta.xml
<CustomField>
    <fullName>Cost_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This serves as a reminder tool for Cost Estimation to ensure they have looked over everything</inlineHelpText>
    <label>Cost Verified</label>
    <type>Checkbox</type>
</CustomField>