test/force-app/main/default/objects/Cost_Estimation_Equipment_Selection__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Cost Estimation Equipment Selections</relationshipLabel>
    <relationshipName>Cost_Estimation_Equipment_Selections</relationshipName>
    <type>Lookup</type>
</CustomField>