test/force-app/main/default/objects/Cost_Estimation_Equipment_Selection__c/fields/NEW_Cost_Assumption_Set__c.field-meta.xml
<CustomField>
    <fullName>NEW_Cost_Assumption_Set__c</fullName>
    <label>CRU</label>
    <referenceTo>NEW_Cost_Assumption_Set__c</referenceTo>
    <relationshipLabel>Cost Estimation Equipment Selections</relationshipLabel>
    <relationshipName>Cost_Estimation_Equipment_Selections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>