test/force-app/main/default/objects/Cost_Estimation_Equipment_Selection__c/fields/Per_Watt__c.field-meta.xml
<CustomField>
    <fullName>Per_Watt__c</fullName>
    <label>$ Per Watt</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>