test/force-app/main/default/objects/Cost_Estimation_Equipment_Selection__c/fields/Tax_Adder_Material__c.field-meta.xml
<CustomField>
    <fullName>Tax_Adder_Material__c</fullName>
    <label>Tax Adder - Material ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>