test/force-app/main/default/objects/Cost_Estimation_Equipment_Selection__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Module</fullName>
            </value>
            <value>
                <fullName>Inverter</fullName>
            </value>
            <value>
                <fullName>MLPE</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Racking</fullName>
            </value>
            <value>
                <fullName>DC Bos</fullName>
            </value>
            <value>
                <fullName>AC Bos</fullName>
            </value>
            <value>
                <fullName>MV Equipment</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Auxiliary Components</fullName>
            </value>
            <value>
                <fullName>Shipping &amp; Storage</fullName>
            </value>
            <value>
                <fullName>Other Material</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>